feat: implement optional like and unlike comment feature with likeCount in detail thread
